Improved hreflang testing

--- a/tests/fixtures/web/localization/hreflang/not-valid-reciprocal-hreflang-en.html
+++ b/tests/fixtures/web/localization/hreflang/not-valid-reciprocal-hreflang-en.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Valid HTML</title>
-    <link href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-en.html" hreflang="x-default"
-          rel="alternate">
-    <link href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-en.html" hreflang="en"
-          rel="alternate">
-    <link href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-es.html" hreflang="fr"
-          rel="alternate">
+    <link rel="alternate" hreflang="x-default"
+          href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-en.html">
+    <link rel="alternate" hreflang="en"
+          href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-en.html">
+    <link rel="alternate" hreflang="es"
+          href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-es.html">
 </head>
 <body>
 <p>Valid HTML</p>
