--- a/tests/fixtures/web/localization/hreflang/not-valid-reciprocal-hreflang-es.html
+++ b/tests/fixtures/web/localization/hreflang/not-valid-reciprocal-hreflang-es.html
@@ -5,10 +5,10 @@
     <title>Valid HTML</title>
     <link rel="alternate" hreflang="x-default"
           href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-en.html">
+    <link rel="alternate" hreflang="fr"
+          href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-es.html">
     <link rel="alternate" hreflang="en"
           href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-en.html">
-    <link rel="alternate" hreflang="es"
-          href="http://localhost:8080/localization/hreflang/not-valid-reciprocal-hreflang-es.html">
 </head>
 <body>
 <p>Valid HTML</p>
