--- a/tests/fixtures/web/html/not-valid-html5-doctype-declaration.html
+++ b/tests/fixtures/web/html/not-valid-html5-doctype-declaration.html
@@ -1,10 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<title>Wrong title</title>
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Invalid HTML5 Doctype declaration</title>
+    <title>Valid HTML5 Doctype declaration</title>
 </head>
 <body>
-<p>Invalid HTML5 Doctype declaration</p>
+<p>Valid HTML5 Doctype declaration</p>
 </body>
 </html>
